[FIX] hr_recruitment: kanban record with long title overflow
Reproduction:
1. Install recruitment
2. Create a new job position with an extra-long title
3. Save and the title of this record is exceed the kanban card

Reason: CSS style doesn’t take account of long title

Fix:  Backported the overflow changes in V15 and added o_text_overflow
to the title of the job's kanban view, so the title does not exceed the
border of the kanban card

opw-2849601

overflow change in V15: https://github.com/odoo/odoo/commit/a0ebb4609848a65f9b6a14a94030ad3144a95038

closes odoo/odoo#95255

X-original-commit: da6b5e177eff2d1166002493216fec4ab4103c06

--- a/addons/web/static/src/scss/kanban_view.scss
+++ b/addons/web/static/src/scss/kanban_view.scss
@@ -99,6 +99,8 @@
 
         .o_kanban_record_title {
             @include o-kanban-record-title($font-size: 13px);
+            overflow-wrap: break-word;
+            word-wrap: break-word;
         }
 
         .o_kanban_record_subtitle {
@@ -377,6 +379,8 @@
         .oe_kanban_details {
             width: 100%;
 
+            overflow-wrap: break-word;
+            word-wrap: break-word;
             // Useful for the class 'o_text_overflow'
             min-width: 0;
 
